test/expected/cli/bench_behavior.out
== bench stops on a non-zero exit code:
shit: 1:16: error: Builtin `bench`: the command `false` exited with status 1.
shit: note: Pass `--ignore-exit-code` to benchmark it regardless.
== the failure sets the exit status:
rc=1
== --ignore-exit-code keeps sampling a failing command:
Benchmark: false (3 runs)
== --no-shell --show-output forks the command directly:
direct
direct
Benchmark: /bin/echo direct (2 runs)
== --runs executes exactly one sample:
Benchmark: true (1 runs)
== invalid sample counts are rejected:
rc=1
rc=1
rc=1
== unsigned overflow is rejected by number parsing:
shit: 1:14: error: --runs expects a number, got '18446744073709551616'.
== invalid values carry granular carets:
shit: 1:14: error: --runs expects a number, got 'nope'.
     1 |  bench --runs nope true
       |               ^~~~ here.
shit: 1:14: error: --runs expects a number, got 'nope'.
     1 |  bench --runs=nope true
       |               ^~~~ here.
shit: 1:14: error: --runs expects a number from 1 through 100000.
     1 |  bench --runs 0 true
       |               ^~ here.
shit: 1:18: error: --duration is too large.
     1 |  bench --duration 18446744073710 true
       |                   ^~~~~~~~~~~~~~ here.
shit: 1:7: error: --runs expects a number, got 'nope'.
     1 |  bench "--runs=nope" true
       |        ^~~~~~~~~~~~~ here.
shit: 1:18: error: --runs expects a number, got 'nope'.
     1 |  runs=nope; bench --runs=$runs true
       |                   ^~~~~~~~~~~~ here.
== an overflowing duration is rejected:
rc=1
== counter capability keeps one complete sample:
counter capability passed
== counter fallback keeps one complete sample:
counter fallback passed
== a failed later sample clears terminal progress:
progress clear check complete
